# zoho_sdk

./: .gitignore  README.md  gemini.md  pyproject.toml
.agents/workflows/: architect.md  debugger.md
src/: gemini.md
src/zoho/: GEMINI.md  __init__.py  auth.py  base_client.py  exceptions.py  logging.py
src/zoho/books/: GEMINI.md  __init__.py  __pycache__  base.py  client.py  exceptions.py  mixins.py
src/zoho/books/resources/: GEMINI.md  __pycache__  banking.py  contacts.py  customer_validator.py  gst.py  inventory.py  projects.py  purchases.py  sales.py
src/zoho/cliq/: GEMINI.md  __init__.py  __pycache__  client.py
src/zoho/creator/: __init__.py  client.py  exceptions.py  gemini.md
src/zoho/inventory/: GEMINI.md  __init__.py  base.py  client.py  exceptions.py
src/zoho/inventory/resources/: GEMINI.md  __init__.py  batches.py  bins.py  inventory_adjustments.py  item_groups.py  items.py  move_orders.py  packages.py  picklists.py  shipments.py  transfer_orders.py
src/zoho/mail/: GEMINI.md  __init__.py  __pycache__  base.py  client.py  exceptions.py
src/zoho/mail/resources/: GEMINI.md  __pycache__  accounts.py  folders.py  messages.py
src/zoho/sheet/: GEMINI.md  __init__.py  __pycache__  client.py
src/zoho/wd/: GEMINI.md  __init__.py  __pycache__  base.py  client.py  exceptions.py
src/zoho/wd/resources/: GEMINI.md  __pycache__  files.py
tests/: gemini.md  test_auth.py  test_books.py  test_cliq.py  test_creator.py  test_inventory.py  test_mail.py  test_sheet.py  test_wd.py
