[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoho-sdk"
version = "0.1.0"
description = "Decoupled SDK for Zoho API services (Books, WorkDrive, Mail, Cliq, Sheet)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[tool.setuptools.packages.find]
where = ["src"]
